--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,16 +1,43 @@
 .main {
   background: #fff;
-  padding: 30px;
+  padding: 50px;
   margin: 50px auto;
-  max-width: 500px;
+  max-width: 70%;
   border-radius: 4px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .main h1{
-  font-size: 20px;
+  font-size: 45px;
   text-align: center;
+  font-family:  consolas;
+  letter-spacing: 0px ;
+  overflow: hidden;
 }
+
+.texto {
+  color: #f04c64;
+  position: relative;
+}
+
+.texto::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  border-left: 2px solid #000;
+  animation: typing 2s steps(8) infinite;
+  background: #fff;
+}
+
+@keyframes typing{
+  100% {
+    left: 100%;
+    margin: 0 -35px 0 35px;
+  }
+}
+
 
 
 
